--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Steve's GitHub Pages Site</title>
-        <link rel="stylesheet" href="site.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Hello World</h1>
